<resources>
    <string name="app_name">Fanous</string>
    <string name="login">Login</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up ?</string>
    <string name="ok_soon">OK Soon</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="ok_bye">OK Bye</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="title_activity_choose_type">ChooseType</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="moslsal">Moslsal</string>
    <string name="program">Program</string>
    <string name="todo">TODO</string>
    <string name="title_activity_moslslat1">Moslslat1</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="main_stars">Main Stars :</string>
    <string name="the_series_follows_the_life_of_ahmed_saber_el_mansy_the_thunderbolt_forces_commander_of_the_battalion_103_who_was_martyred_in_the_checkpoint_of_the_burth_square_in_the_egyptian_city_of_rafah_in_2017_while_countering_a_terrorist_attack_in_sinai">The series follows the life of Ahmed Saber El-Mansy, the Thunderbolt Forces commander of the battalion 103 who was martyred in the checkpoint of the Burth Square in the Egyptian city of Rafah in 2017 while countering a terrorist attack in Sinai.</string>
    <string name="_9_00_pm_10_15_pm">9:00 PM , 10:15 PM</string>
    <string name="on_04_00_am_09_00_am_3_30_pm_on_drama_02_00_am_05_45_am_1_15_pm">ON : 04:00 AM, 09:00 AM, 3:30 PM , ON Drama :02:00 AM, 05:45 AM, 1:15 PM</string>
    <string name="https_youtu_be_gbnrpetrure">https://youtu.be/gbNrpetRUrE</string>
    <string name="amir_karara_ahmed_el_awady_sarah_adel_and_dina_foaud">Amir Karara, Ahmed El Awady, Sarah Adel and Dina Foaud</string>
    <string name="display_time">Display Time :</string>
    <string name="channel">Channel :</string>
    <string name="re_display_time">Re-Display Time :</string>
    <string name="youtube_promo_link">Youtube Promo Link :</string>
    <string name="el_ekhteyar">El Ekhteyar</string>
    <string name="on_on_drama">ON , ON Drama</string>
    <string name="brief_description">Brief Description :</string>
    <string name="https_www_youtube_com_watch_v_w_ygqyclvku">https://www.youtube.com/watch?v=W-ygQYclVKU</string>
    <string name="https_www_youtube_com_watch_v_xkmeawpysx0">https://www.youtube.com/watch?v=xkMEAwPYSX0</string>
</resources>
