<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:touchscreenBlocksFocus="false">

        <EditText
            android:id="@+id/editText5"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:autofillHints=""
            android:clickable="false"
            android:contextClickable="false"
            android:editable="false"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="none"
            android:text="@string/on_on_drama"
            android:textColor="#000000"
            app:layout_constraintBottom_toTopOf="@id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView4" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="49dp"
            android:layout_marginBottom="36dp"
            android:clickable="false"
            android:contextClickable="false"
            android:text="@string/el_ekhteyar"
            android:textStyle="bold"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="79dp"
            android:clickable="false"
            android:contextClickable="false"
            android:text="@string/channel"
            android:textColor="#E53935"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editText5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:clickable="false"
            android:contextClickable="false"
            android:text="@string/main_stars"
            android:textColor="#E53935"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/editText4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.039"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText5" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:clickable="false"
            android:contextClickable="false"
            android:text="@string/brief_description"
            android:textColor="#E53935"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/editText3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText4" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:clickable="false"
            android:contextClickable="false"
            android:text="@string/re_display_time"
            android:textColor="#E53935"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/editText7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText6" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="104dp"
            android:layout_marginBottom="20dp"
            android:clickable="false"
            android:contextClickable="false"
            app:layout_constraintBottom_toTopOf="@id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ekh" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="251dp"
            android:layout_marginBottom="20dp"
            android:clickable="false"
            android:contextClickable="false"
            android:text="@string/display_time"
            android:textColor="#E53935"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/editText6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText3"
            app:layout_constraintVertical_bias="0.581" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:clickable="false"
            android:contextClickable="false"
            android:text="@string/youtube_promo_link"
            android:textColor="#E53935"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/editText8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText7" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:clickable="false"
            android:contextClickable="false"
            android:editable="false"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="none"
            android:text="@string/the_series_follows_the_life_of_ahmed_saber_el_mansy_the_thunderbolt_forces_commander_of_the_battalion_103_who_was_martyred_in_the_checkpoint_of_the_burth_square_in_the_egyptian_city_of_rafah_in_2017_while_countering_a_terrorist_attack_in_sinai"
            app:layout_constraintBottom_toTopOf="@id/textView8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView6" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="250dp"
            android:layout_height="88dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:clickable="false"
            android:contextClickable="false"
            android:editable="false"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="none"
            android:text="@string/amir_karara_ahmed_el_awady_sarah_adel_and_dina_foaud"
            android:textColor="#000000"
            app:layout_constraintBottom_toTopOf="@id/textView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView5" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:clickable="false"
            android:contextClickable="false"
            android:editable="false"
            android:ems="10"
            android:inputType="none"
            android:text="@string/_9_00_pm_10_15_pm"
            app:layout_constraintBottom_toBottomOf="@id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView8" />

        <EditText
            android:id="@+id/editText7"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:clickable="false"
            android:contextClickable="false"
            android:editable="false"
            android:ems="10"
            android:inputType="none"
            android:text="4:00 AM , 9:00AM , 2:00 AM"
            app:layout_constraintBottom_toTopOf="@id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView7" />

        <EditText
            android:id="@+id/editText8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="83dp"
            android:layout_marginBottom="50dp"
            android:autofillHints=""
            android:contextClickable="false"
            android:editable="false"
            android:ems="10"
            android:inputType="none"
            android:text="@string/https_youtu_be_gbnrpetrure"
            android:textColor="#1E88E5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>